--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/">Ogłoszex</a>
+        <a class="navbar-brand" href="/">Ogłoszenia</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,7 +32,7 @@
 
     <div class="jumbotron home-jumbo">
         <div class="container text-center text-white jumbo-container">
-            <h1 class="display-3">Ogłoszex</h1>
+            <h1 class="display-3">Ogłoszenia</h1>
             <p>W naszym serwisie znajdziesz tylko najlepsze oferty.</p>
         </div>
     </div>
