--- a/src/main/resources/static/add.html
+++ b/src/main/resources/static/add.html
@@ -11,20 +11,20 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/">Ogłoszex</a>
+        <a class="navbar-brand" href="/">OFA! OFA! OFA!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/categories.html">Kategorie</a>
+                    <a class="nav-link" href="/categories.html">Categories</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/search.html">Szukaj</a>
+                    <a class="nav-link" href="/search.html">Search</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/add.html">Dodaj</a>
+                    <a class="nav-link" href="/add.html">Add</a>
                 </li>
             </ul>
         </div>
@@ -32,37 +32,37 @@
 
     <div class="jumbotron home-jumbo">
         <div class="container text-center text-white">
-            <h1 class="display-3">Ogłoszex</h1>
-            <p>Dodaj nowe ogłoszenie</p>
+            <h1 class="display-3">OFA! OFA! OFA!</h1>
+            <p>Add new OFA!</p>
         </div>
     </div>
 
     <div class="container container-main">
         <form class="col-6 mx-auto mb-5" id="add-form">
             <div class="form-group">
-                <label for="titleInput">Tytuł</label>
-                <input type="text" class="form-control" id="titleInput" placeholder="Przykładowy tytuł" name="title">
+                <label for="titleInput">Title</label>
+                <input type="text" class="form-control" id="titleInput" placeholder="Example title" name="title">
             </div>
             <div class="form-group">
-                <label for="imgUrlInput">Url obrazka</label>
-                <input type="url" class="form-control" id="imgUrlInput" placeholder="http://.../obrazek.jpg" name="imgUrl">
+                <label for="imgUrlInput">image Url</label>
+                <input type="url" class="form-control" id="imgUrlInput" placeholder="http://.../image.jpg" name="imgUrl">
             </div>
             <div class="form-group">
-                <label for="priceInput">Cena</label>
-                <input type="number" class="form-control" id="priceInput" placeholder="123,99" min="0.00" max="10000.00" step="0.01" name="price">
+                <label for="priceInput">Price</label>
+                <input type="number" class="form-control" id="priceInput" placeholder="123,999" min="0.00" max="1000000.00" step="0.01" name="price">
             </div>
             <div class="form-group">
-                <label for="descriptionInput">Opis</label>
-                <textarea class="form-control" id="descriptionInput" placeholder="Szczegółowy opis ogłoszenia" rows="10" name="description"></textarea>
+                <label for="descriptionInput">Description</label>
+                <textarea class="form-control" id="descriptionInput" placeholder="OFA details description" rows="10" name="description"></textarea>
             </div>
             <div class="form-group">
-                <label for="categorySelect">Kategoria</label>
+                <label for="categorySelect">Category</label>
                 <select class="form-control" id="categorySelect" name="category">
                 </select>
             </div>
 
-            <button type="submit" class="btn btn-primary" id="add-button">Dodaj</button>
-            <div id="err-message" style="display:none">Błąd komunikacji z serwerem</div>
+            <button type="submit" class="btn btn-primary" id="add-button">Add</button>
+            <div id="err-message" style="display:none">error server communication</div>
         </form>
     </div>
 
