--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wyszukiwarka</title>
+    <title>Page search</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -11,20 +11,20 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/">Ogłoszex</a>
+        <a class="navbar-brand" href="/">OFA! OFA! OFA!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/categories.html">Kategorie</a>
+                    <a class="nav-link" href="/categories.html">Categories</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/search.html">Szukaj</a>
+                    <a class="nav-link" href="/search.html">Search</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/add.html">Dodaj</a>
+                    <a class="nav-link" href="/add.html">Add</a>
                 </li>
             </ul>
         </div>
@@ -32,7 +32,7 @@
 
     <div class="jumbotron home-jumbo">
         <div class="container text-center text-white">
-            <h1 class="display-3">Szukaj ogłoszeń</h1>
+            <h1 class="display-3">Search OFA!</h1>
             <form class="form-inline justify-content-center" id="search-form">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search-input">
                 <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Search</button>
@@ -42,7 +42,7 @@
 
     <div class="container container-main">
         <div class="row">
-            <h2>Szukaj wśród naszych ogłoszeń</h2>
+            <h2>Search in new OFAs!</h2>
         </div>
     </div>
 
