tine swahili mix

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,8 +32,8 @@
 
     <div class="jumbotron home-jumbo">
         <div class="container text-center text-white jumbo-container">
-            <h1 class="display-3">Karibu OFA! OFA! OFA!</h1>
-            <p>Welcome brothers, sisters and uncle on page with advertisment</p>
+            <h1 class="display-3">OFA! OFA! OFA!</h1>
+            <p>Karibu kaka, dada and mjomba mkubwa on page with advertisments</p>
             <p>as You wish</p>
             <p>now Your turn</p>
         </div>
