--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,13 +18,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/categories.html">Kategorie</a>
+                    <a class="nav-link" href="/categories.html">Category</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/search.html">Szukaj</a>
+                    <a class="nav-link" href="/search.html">Search</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/add.html">Dodaj</a>
+                    <a class="nav-link" href="/add.html">Add</a>
                 </li>
             </ul>
         </div>
